# Newsletter_Gen

newsletter_gen/: pyproject.toml
newsletter_gen/src/newsletter_gen/: main.py  newslettercrew.py
newsletter_gen/src/newsletter_gen/config/: agents.yaml
newsletter_gen/src/newsletter_gen/tools/: research.py
